last changes for appointment + api-docs
