# routes/api.php
@@ -21,17 +21,13 @@ Route::group([
 ], function() {
     Route::post('/login', [AuthController::class, 'login']);
     Route::post('/register', [AuthController::class, 'register']);
-    Route::post('/logout', [AuthController::class, 'logout']);
-    Route::post('/refresh', [AuthController::class, 'refresh']);
-    Route::get('/user-profile', [AuthController::class, 'userProfile']);
-    Route::get('/user-profiles', [AuthController::class, 'userProfiles']);
 });
 
 Route::middleware('auth:api')->group(function() {
-    Route::get('/appointment/byPO/{id}', [AppointmentController::class, 'showByPartsOrOrg']);
+    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::post('/refresh', [AuthController::class, 'refresh']);
+    Route::get('/user', [AuthController::class, 'userProfile']);
+    Route::get('/users', [AuthController::class, 'userProfiles']);
+    Route::get('/appointment/byPO', [AppointmentController::class, 'showByPartsOrOrg']);
     Route::apiResource('/appointment', AppointmentController::class);
-});
-
-Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
-    return $request->user();
 });
